--- a/about/about_me.html
+++ b/about/about_me.html
@@ -223,7 +223,13 @@
 							<h5>Platzi</h5>
 							<ul>
 								<li> <a href="../docs/diploma-programacion-basica.pdf" target="_blank"
-										class="badge badge-light">Programacio Basica con JavaScript</a></li>
+										class="badge badge-light">Programacion Basica con JavaScript</a></li>
+
+							</ul>
+							<h5>CertiProf</h5>
+							<ul>
+								<li> <a href="../docs/scrum.pdf" target="_blank"
+										class="badge badge-light">Scrum Foundations Professional Certificate (SFPC)</a></li>
 
 							</ul>
 							<!--<h5>Icons</h5>
@@ -500,6 +506,12 @@
 							<ul>
 								<li> <a href="../docs/diploma-programacion-basica.pdf" target="_blank"
 										class="badge badge-light">JavaScript Basic Programming</a></li>
+
+							</ul>
+							<h5>CertiProf</h5>
+							<ul>
+								<li> <a href="../docs/scrum.pdf" target="_blank"
+										class="badge badge-light">Scrum Foundations Professional Certificate (SFPC)</a></li>
 
 							</ul>
 							<!--<h5>Icons</h5>
