Se agrega certificación KPI

--- a/about/about_me.html
+++ b/about/about_me.html
@@ -231,7 +231,12 @@
 								<li> <a href="../docs/scrum.pdf" target="_blank"
 										class="badge badge-light">Scrum Foundations Professional Certificate (SFPC)</a></li>
 
-							</ul>
+                            </ul>
+							<h5>Capacitate para el Empleo</h5>
+                            <ul>
+								<li> <a href="../docs/KPI.pdf" target="_blank"
+										class="badge badge-light">Evaluador de Indicadores Clave (KPI)</a></li>
+                            </ul>
 							<!--<h5>Icons</h5>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
@@ -513,7 +518,12 @@
 								<li> <a href="../docs/scrum.pdf" target="_blank"
 										class="badge badge-light">Scrum Foundations Professional Certificate (SFPC)</a></li>
 
-							</ul>
+                            </ul>
+                            <h5>Capacitate para el Empleo</h5>
+                            <ul>
+								<li> <a href="../docs/KPI.pdf" target="_blank"
+										class="badge badge-light">Evaluador de Indicadores Clave (KPI)</a></li>
+                            </ul>
 							<!--<h5>Icons</h5>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
