--- a/about/about_me.html
+++ b/about/about_me.html
@@ -103,6 +103,16 @@
 										</td>
 									</tr>
 									<tr>
+										<td style="text-align: left;"><strong>Python</strong></td>
+										<td style="text-align: center;" class="col-8">
+											<div class="progress">
+												<div class="progress-bar progress-bar-striped progress-bar-animated bg-info"
+													role="progressbar" aria-valuenow="60" aria-valuemin="0"
+													aria-valuemax="100" style="width: 60%"></div>
+											</div>
+										</td>
+									</tr>
+									<tr>
 										<td style="text-align: left;"><strong>HTML/CSS</strong></td>
 										<td style="text-align: center;" class="col-8">
 											<div class="progress">
@@ -248,15 +258,23 @@
 							<h5>Platzi</h5>
 							<ul>
 								<li> <a href="../docs/diploma-git-github.pdf" target="_blank"
-									class="badge badge-light">Curso Profesional de Git y GitHub</a></li>
-							<li> <a href="../docs/diploma-negocios-data-science.pdf" target="_blank"
-									class="badge badge-light">Análisis de Negocios para Ciencia de Datos</a></li>
-							<li> <a href="../docs/diploma-excel.pdf" target="_blank"
-									class="badge badge-light">Excel para el Análisis de Datos</a></li>
-							<li> <a href="../docs/diploma-bi-excel.pdf" target="_blank"
-									class="badge badge-light">Introducción a Business Intelligence con Excel</a></li>
-							<li> <a href="../docs/diploma-business-intelligence.pdf" target="_blank"
-									class="badge badge-light">Introducción a Business Intelligence con Power BI</a></li>
+										class="badge badge-light">Curso Profesional de Git y GitHub</a></li>
+								<li> <a href="../docs/diploma-negocios-data-science.pdf" target="_blank"
+										class="badge badge-light">Análisis de Negocios para Ciencia de Datos</a></li>
+								<li> <a href="../docs/diploma-excel.pdf" target="_blank" class="badge badge-light">Excel
+										para el Análisis de Datos</a></li>
+								<li> <a href="../docs/diploma-bi-excel.pdf" target="_blank"
+										class="badge badge-light">Introducción a Business Intelligence con Excel</a>
+								</li>
+								<li> <a href="../docs/diploma-business-intelligence.pdf" target="_blank"
+										class="badge badge-light">Introducción a Business Intelligence con Power BI</a>
+								</li>
+								<li> <a href="../docs/diploma-python.pdf" target="_blank"
+										class="badge badge-light">Curso Básico de Python</a></li>
+								<li> <a href="../docs/diploma-python-cs.pdf" target="_blank"
+										class="badge badge-light">Pensamiento Computacional con Python</a></li>
+								<li> <a href="../docs/diploma-poo-python.pdf" target="_blank"
+										class="badge badge-light">POO y algoritmos en Python</a></li>
 
 							</ul>
 							<h5>CertiProf</h5>
@@ -422,6 +440,16 @@
 										</td>
 									</tr>
 									<tr>
+										<td style="text-align: left;"><strong>Python</strong></td>
+										<td style="text-align: center;" class="col-8">
+											<div class="progress">
+												<div class="progress-bar progress-bar-striped progress-bar-animated bg-info"
+													role="progressbar" aria-valuenow="60" aria-valuemin="0"
+													aria-valuemax="100" style="width: 60%"></div>
+											</div>
+										</td>
+									</tr>
+									<tr>
 										<td style="text-align: left;"><strong>HTML/CSS</strong></td>
 										<td style="text-align: center;" class="col-8">
 											<div class="progress">
@@ -567,12 +595,20 @@
 										class="badge badge-light">Git and GitHub Professional Course</a></li>
 								<li> <a href="../docs/diploma-negocios-data-science.pdf" target="_blank"
 										class="badge badge-light">Business Analysis for Data Science</a></li>
-								<li> <a href="../docs/diploma-excel.pdf" target="_blank"
-										class="badge badge-light">Excel for Data Analysis</a></li>
+								<li> <a href="../docs/diploma-excel.pdf" target="_blank" class="badge badge-light">Excel
+										for Data Analysis</a></li>
 								<li> <a href="../docs/diploma-bi-excel.pdf" target="_blank"
-										class="badge badge-light">Introduction to Business Intelligence with Excel</a></li>
+										class="badge badge-light">Introduction to Business Intelligence with Excel</a>
+								</li>
 								<li> <a href="../docs/diploma-business-intelligence.pdf" target="_blank"
-										class="badge badge-light">Introduction to Business Intelligence with Power BI Course</a></li>
+										class="badge badge-light">Introduction to Business Intelligence with Power BI
+										Course</a></li>
+								<li> <a href="../docs/diploma-python.pdf" target="_blank"
+										class="badge badge-light">Python Basic Course</a></li>
+								<li> <a href="../docs/diploma-python-cs.pdf" target="_blank"
+										class="badge badge-light">Computational thinking with Python</a></li>
+								<li> <a href="../docs/diploma-poo-python.pdf" target="_blank"
+										class="badge badge-light">OOP and algorithms in Python</a></li>
 
 							</ul>
 							<h5>CertiProf</h5>
