--- a/about/about_me.html
+++ b/about/about_me.html
@@ -296,7 +296,9 @@
 								<li> <a href="../docs/diploma-programacion-estocastica.pdf" target="_blank"
 										class="badge badge-light">Estadística Computacional con Python</a>
 								</li>
-
+								<li> <a href="../docs/MySQL esencial.pdf" target="_blank"
+									class="badge badge-light">MySQL esencial</a>
+							</li>
 
 
 							</ul>
@@ -561,8 +563,10 @@
 										class="badge badge-light">Terminal and Command Line</a></li>
 								<li> <a href="../docs/diploma-microsoft-teams.pdf" target="_blank"
 										class="badge badge-light">Microsoft Teams</a></li>
-								<li> <a href="../docs/cs.pdf" target="_blank" class="badge badge-light">Customer Service</a></li>
-								<li> <a href="../docs/helpdesk.pdf" target="_blank" class="badge badge-light">Technical Support</a></li>
+								<li> <a href="../docs/cs.pdf" target="_blank" class="badge badge-light">Customer
+										Service</a></li>
+								<li> <a href="../docs/helpdesk.pdf" target="_blank" class="badge badge-light">Technical
+										Support</a></li>
 
 							</ul>
 							<h5>Programming</h5>
@@ -575,26 +579,35 @@
 										class="badge badge-light">OOP and algorithms in Python</a></li>
 								<li> <a href="../docs/CertificadoDeFinalizacion_Python avanzado.pdf" target="_blank"
 										class="badge badge-light">Advanced python</a></li>
-								<li> <a href="../docs/modelos_qa.pdf" target="_blank" class="badge badge-light">Software Quality Models</a></li>
-								<li> <a href="../docs/poojava.pdf" target="_blank" class="badge badge-light">OOP Java</a></li>
-								<li> <a href="../docs/qa_dev.pdf" target="_blank" class="badge badge-light">Quality in Software Development</a></li>
+								<li> <a href="../docs/modelos_qa.pdf" target="_blank" class="badge badge-light">Software
+										Quality Models</a></li>
+								<li> <a href="../docs/poojava.pdf" target="_blank" class="badge badge-light">OOP
+										Java</a></li>
+								<li> <a href="../docs/qa_dev.pdf" target="_blank" class="badge badge-light">Quality in
+										Software Development</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-xsmall">
 							<h5>Data Science & BI</h5>
 							<ul>
-								<li> <a href="../docs/KPI.pdf" target="_blank" class="badge badge-light">KPI indicators</a></li>
+								<li> <a href="../docs/KPI.pdf" target="_blank" class="badge badge-light">KPI
+										indicators</a></li>
 								<li> <a href="../docs/diploma-negocios-data-science.pdf" target="_blank"
 										class="badge badge-light">Business Analysis for Data Science</a></li>
-								<li> <a href="../docs/diploma-excel.pdf" target="_blank" class="badge badge-light">Excel for Data Analysis</a></li>
+								<li> <a href="../docs/diploma-excel.pdf" target="_blank" class="badge badge-light">Excel
+										for Data Analysis</a></li>
 								<li> <a href="../docs/diploma-bi-excel.pdf" target="_blank"
 										class="badge badge-light">Introduction to Business Intelligence with Excel</a>
 								</li>
 								<li> <a href="../docs/diploma-business-intelligence.pdf" target="_blank"
-										class="badge badge-light">Introduction to Business Intelligence with Power BI Course</a>
+										class="badge badge-light">Introduction to Business Intelligence with Power BI
+										Course</a>
 								</li>
 								<li> <a href="../docs/diploma-programacion-estocastica.pdf" target="_blank"
 										class="badge badge-light">Computational Statistics with Python</a>
+								</li>
+								<li> <a href="../docs/MySQL esencial.pdf" target="_blank"
+										class="badge badge-light">Essential MySQL</a>
 								</li>
 							</ul>
 						</div>
